Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33680

Server hangs or assertion fails upon SELECT with limited max_tmp_space_usage

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • N/A
    • 11.5.1
    • Server
    • None

    Description

      --source include/have_sequence.inc
       
      set max_tmp_space_usage= 1024*1024;
      select count(distinct concat(seq,repeat('x',1000))) from seq_1_to_1000;
      

      bb-11.5-monty f551fa75e13dd57b057117c570f2e2414ec6d500

      mariadbd: /data/bld/bb-11.5-monty-asan/sql/protocol.cc:618: void Protocol::end_statement(): Assertion `0' failed.
      240315  0:42:12 [ERROR] mysqld got signal 6 ;
       
      #9  0x00007fdcafe53e32 in __GI___assert_fail (assertion=0x563a31115020 "0", file=0x563a311144e0 "/data/bld/bb-11.5-monty-asan/sql/protocol.cc", line=618, function=0x563a31114f00 "void Protocol::end_statement()") at ./assert/assert.c:101
      #10 0x0000563a2ee4feab in Protocol::end_statement (this=0x62c0000c0830) at /data/bld/bb-11.5-monty-asan/sql/protocol.cc:618
      #11 0x0000563a2f133f47 in dispatch_command (command=COM_QUERY, thd=0x62c0000c0218, packet=0x629000249219 "", packet_length=70, blocking=true) at /data/bld/bb-11.5-monty-asan/sql/sql_parse.cc:2420
      #12 0x0000563a2f12d91c in do_command (thd=0x62c0000c0218, blocking=true) at /data/bld/bb-11.5-monty-asan/sql/sql_parse.cc:1406
      #13 0x0000563a2f60763e in do_handle_one_connection (connect=0x608000002db8, put_in_cache=true) at /data/bld/bb-11.5-monty-asan/sql/sql_connect.cc:1439
      #14 0x0000563a2f606fff in handle_one_connection (arg=0x608000002d38) at /data/bld/bb-11.5-monty-asan/sql/sql_connect.cc:1341
      #15 0x0000563a3024d578 in pfs_spawn_thread (arg=0x617000005b98) at /data/bld/bb-11.5-monty-asan/storage/perfschema/pfs.cc:2201
      #16 0x00007fdcafea8044 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
      #17 0x00007fdcaff2861c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
      

      Non-debug build hangs instead.

      Thread 6 (Thread 0x7fc9ea9406c0 (LWP 3421962) "mariadbd"):
      #0  0x00007fc9eff1b05f in __GI___poll (fds=fds@entry=0x7fc9ea93fa08, nfds=nfds@entry=1, timeout=timeout@entry=28800000) at ../sysdeps/unix/sysv/linux/poll.c:29
      #1  0x000055c5ae933c3b in poll (__timeout=28800000, __nfds=1, __fds=0x7fc9ea93fa08) at /usr/include/x86_64-linux-gnu/bits/poll2.h:39
      #2  vio_io_wait (vio=vio@entry=0x7fc9d8008618, event=event@entry=VIO_IO_EVENT_READ, timeout=28800000) at /data/bld/bb-11.5-monty-rel/vio/viosocket.c:948
      #3  0x000055c5ae933d00 in vio_socket_io_wait (vio=vio@entry=0x7fc9d8008618, event=event@entry=VIO_IO_EVENT_READ) at /data/bld/bb-11.5-monty-rel/vio/viosocket.c:116
      #4  0x000055c5ae933da3 in vio_read (vio=0x7fc9d8008618, buf=0x7fc9d8008828 "\002", size=4) at /data/bld/bb-11.5-monty-rel/vio/viosocket.c:182
      #5  0x000055c5ae8ff678 in my_real_read (net=0x7fc9d8000f20, complen=complen@entry=0x7fc9ea93fc88, header=1 '\001') at /data/bld/bb-11.5-monty-rel/sql/net_serv.cc:823
      #6  0x000055c5ae9004f0 in my_net_read_packet_reallen (net=0x7fc9d8000f20, read_from_server=<optimized out>, reallen=reallen@entry=0x7fc9ea93fcd8) at /data/bld/bb-11.5-monty-rel/sql/net_serv.cc:1043
      #7  0x000055c5ae9005ed in my_net_read_packet (net=<optimized out>, read_from_server=<optimized out>) at /data/bld/bb-11.5-monty-rel/sql/net_serv.cc:1027
      #8  0x000055c5ae57e945 in do_command (thd=0x7fc9d8000c68, blocking=blocking@entry=true) at /data/bld/bb-11.5-monty-rel/sql/sql_parse.cc:1262
      #9  0x000055c5ae697017 in do_handle_one_connection (connect=<optimized out>, connect@entry=0x55c5b0b35c88, put_in_cache=put_in_cache@entry=true) at /data/bld/bb-11.5-monty-rel/sql/sql_connect.cc:1439
      #10 0x000055c5ae6973ad in handle_one_connection (arg=arg@entry=0x55c5b0b35c88) at /data/bld/bb-11.5-monty-rel/sql/sql_connect.cc:1341
      #11 0x000055c5ae9c5de7 in pfs_spawn_thread (arg=0x55c5b0b1e548) at /data/bld/bb-11.5-monty-rel/storage/perfschema/pfs.cc:2201
      #12 0x00007fc9efea8044 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
      #13 0x00007fc9eff2861c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
       
      Thread 5 (Thread 0x7fc9ea98b6c0 (LWP 3421959) "mariadbd"):
      #0  0x00007fc9efe5bc02 in __GI___sigtimedwait (set=0x7fc9ea98ac90, info=0x7fc9ea98ad10, timeout=0x0) at ../sysdeps/unix/sysv/linux/sigtimedwait.c:31
      #1  0x000055c5ae482a7b in my_sigwait (code=<synthetic pointer>, sig=<synthetic pointer>, set=0x7fc9ea98ac90) at /data/bld/bb-11.5-monty-rel/include/my_pthread.h:191
      #2  signal_hand () at /data/bld/bb-11.5-monty-rel/sql/mysqld.cc:3246
      #3  0x000055c5ae9c5de7 in pfs_spawn_thread (arg=0x55c5b0b1e278) at /data/bld/bb-11.5-monty-rel/storage/perfschema/pfs.cc:2201
      #4  0x00007fc9efea8044 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
      #5  0x00007fc9eff2861c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
       
      Thread 4 (Thread 0x7fc9ea9d66c0 (LWP 3421958) "mariadbd"):
      #0  __futex_abstimed_wait_common64 (private=0, cancel=true, abstime=0x0, op=393, expected=0, futex_word=0x55c5af61d54c <COND_manager+44>) at ./nptl/futex-internal.c:57
      #1  __futex_abstimed_wait_common (futex_word=futex_word@entry=0x55c5af61d54c <COND_manager+44>, expected=expected@entry=0, clockid=clockid@entry=0, abstime=abstime@entry=0x0, private=private@entry=0, cancel=cancel@entry=true) at ./nptl/futex-internal.c:87
      #2  0x00007fc9efea4e0b in __GI___futex_abstimed_wait_cancelable64 (futex_word=futex_word@entry=0x55c5af61d54c <COND_manager+44>, expected=expected@entry=0, clockid=clockid@entry=0, abstime=abstime@entry=0x0, private=private@entry=0) at ./nptl/futex-internal.c:139
      #3  0x00007fc9efea7468 in __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x55c5af61d560 <LOCK_manager>, cond=0x55c5af61d520 <COND_manager>) at ./nptl/pthread_cond_wait.c:503
      #4  ___pthread_cond_wait (cond=cond@entry=0x55c5af61d520 <COND_manager>, mutex=mutex@entry=0x55c5af61d560 <LOCK_manager>) at ./nptl/pthread_cond_wait.c:618
      #5  0x000055c5ae42e6a4 in psi_cond_wait (that=0x55c5af61d520 <COND_manager>, mutex=0x55c5af61d560 <LOCK_manager>, file=<optimized out>, line=<optimized out>) at /data/bld/bb-11.5-monty-rel/mysys/my_thr_init.c:596
      #6  0x000055c5ae3db0d9 in inline_mysql_cond_wait (that=0x55c5af61d520 <COND_manager>, mutex=0x55c5af61d560 <LOCK_manager>, src_file=0x55c5aed03958 "/data/bld/bb-11.5-monty-rel/sql/sql_manager.cc", src_line=103) at /data/bld/bb-11.5-monty-rel/include/mysql/psi/mysql_thread.h:1070
      #7  handle_manager (arg=arg@entry=0x0) at /data/bld/bb-11.5-monty-rel/sql/sql_manager.cc:103
      #8  0x000055c5ae9c5de7 in pfs_spawn_thread (arg=0x55c5b066dda8) at /data/bld/bb-11.5-monty-rel/storage/perfschema/pfs.cc:2201
      #9  0x00007fc9efea8044 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
      #10 0x00007fc9eff2861c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
       
      Thread 3 (Thread 0x7fc9eb1d76c0 (LWP 3421957) "mariadbd"):
      #0  __futex_abstimed_wait_common64 (private=0, cancel=true, abstime=0x7fc9eb1d6d50, op=393, expected=0, futex_word=0x55c5afe52f88 <COND_checkpoint+40>) at ./nptl/futex-internal.c:57
      #1  __futex_abstimed_wait_common (futex_word=futex_word@entry=0x55c5afe52f88 <COND_checkpoint+40>, expected=expected@entry=0, clockid=clockid@entry=0, abstime=abstime@entry=0x7fc9eb1d6d50, private=private@entry=0, cancel=cancel@entry=true) at ./nptl/futex-internal.c:87
      #2  0x00007fc9efea4e0b in __GI___futex_abstimed_wait_cancelable64 (futex_word=futex_word@entry=0x55c5afe52f88 <COND_checkpoint+40>, expected=expected@entry=0, clockid=clockid@entry=0, abstime=abstime@entry=0x7fc9eb1d6d50, private=private@entry=0) at ./nptl/futex-internal.c:139
      #3  0x00007fc9efea774c in __pthread_cond_wait_common (abstime=0x7fc9eb1d6d50, clockid=0, mutex=0x55c5afe52fa0 <LOCK_checkpoint>, cond=0x55c5afe52f60 <COND_checkpoint>) at ./nptl/pthread_cond_wait.c:503
      #4  ___pthread_cond_timedwait64 (cond=cond@entry=0x55c5afe52f60 <COND_checkpoint>, mutex=mutex@entry=0x55c5afe52fa0 <LOCK_checkpoint>, abstime=abstime@entry=0x7fc9eb1d6d50) at ./nptl/pthread_cond_wait.c:643
      #5  0x000055c5ae42e71a in psi_cond_timedwait (that=0x55c5afe52f60 <COND_checkpoint>, mutex=0x55c5afe52fa0 <LOCK_checkpoint>, abstime=abstime@entry=0x7fc9eb1d6d50, file=file@entry=0x55c5aee6de68 "/data/bld/bb-11.5-monty-rel/storage/maria/ma_servicethread.c", line=line@entry=115) at /data/bld/bb-11.5-monty-rel/mysys/my_thr_init.c:609
      #6  0x000055c5ae3ed049 in inline_mysql_cond_timedwait (src_file=0x55c5aee6de68 "/data/bld/bb-11.5-monty-rel/storage/maria/ma_servicethread.c", src_line=115, abstime=0x7fc9eb1d6d50, mutex=<optimized out>, that=<optimized out>) at /data/bld/bb-11.5-monty-rel/include/mysql/psi/mysql_thread.h:1086
      #7  my_service_thread_sleep (control=control@entry=0x55c5af554200 <checkpoint_control>, sleep_time=sleep_time@entry=30000000000) at /data/bld/bb-11.5-monty-rel/storage/maria/ma_servicethread.c:115
      #8  0x000055c5ae95e5e9 in ma_checkpoint_background (arg=arg@entry=0x1e) at /data/bld/bb-11.5-monty-rel/storage/maria/ma_checkpoint.c:725
      #9  0x000055c5ae9c5de7 in pfs_spawn_thread (arg=0x55c5b07c1398) at /data/bld/bb-11.5-monty-rel/storage/perfschema/pfs.cc:2201
      #10 0x00007fc9efea8044 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
      #11 0x00007fc9eff2861c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
       
      Thread 2 (Thread 0x7fc9f0b2f6c0 (LWP 3421956) "mariadbd"):
      #0  __futex_abstimed_wait_common64 (private=0, cancel=true, abstime=0x7fc9f0b2eda0, op=393, expected=0, futex_word=0x55c5afedff28 <COND_timer+40>) at ./nptl/futex-internal.c:57
      #1  __futex_abstimed_wait_common (futex_word=futex_word@entry=0x55c5afedff28 <COND_timer+40>, expected=expected@entry=0, clockid=clockid@entry=0, abstime=abstime@entry=0x7fc9f0b2eda0, private=private@entry=0, cancel=cancel@entry=true) at ./nptl/futex-internal.c:87
      #2  0x00007fc9efea4e0b in __GI___futex_abstimed_wait_cancelable64 (futex_word=futex_word@entry=0x55c5afedff28 <COND_timer+40>, expected=expected@entry=0, clockid=clockid@entry=0, abstime=abstime@entry=0x7fc9f0b2eda0, private=private@entry=0) at ./nptl/futex-internal.c:139
      #3  0x00007fc9efea774c in __pthread_cond_wait_common (abstime=0x7fc9f0b2eda0, clockid=0, mutex=0x55c5afedff40 <LOCK_timer>, cond=0x55c5afedff00 <COND_timer>) at ./nptl/pthread_cond_wait.c:503
      #4  ___pthread_cond_timedwait64 (cond=cond@entry=0x55c5afedff00 <COND_timer>, mutex=mutex@entry=0x55c5afedff40 <LOCK_timer>, abstime=abstime@entry=0x7fc9f0b2eda0) at ./nptl/pthread_cond_wait.c:643
      #5  0x000055c5ae42e71a in psi_cond_timedwait (that=that@entry=0x55c5afedff00 <COND_timer>, mutex=mutex@entry=0x55c5afedff40 <LOCK_timer>, abstime=abstime@entry=0x7fc9f0b2eda0, file=file@entry=0x55c5aeed45b8 "/data/bld/bb-11.5-monty-rel/mysys/thr_timer.c", line=line@entry=321) at /data/bld/bb-11.5-monty-rel/mysys/my_thr_init.c:609
      #6  0x000055c5ae42e8f6 in inline_mysql_cond_timedwait (that=0x55c5afedff00 <COND_timer>, mutex=0x55c5afedff40 <LOCK_timer>, src_file=0x55c5aeed45b8 "/data/bld/bb-11.5-monty-rel/mysys/thr_timer.c", src_line=321, abstime=0x7fc9f0b2eda0) at /data/bld/bb-11.5-monty-rel/include/mysql/psi/mysql_thread.h:1086
      #7  timer_handler (arg=arg@entry=0x0) at /data/bld/bb-11.5-monty-rel/mysys/thr_timer.c:321
      #8  0x000055c5ae9c5de7 in pfs_spawn_thread (arg=0x55c5b0715e48) at /data/bld/bb-11.5-monty-rel/storage/perfschema/pfs.cc:2201
      #9  0x00007fc9efea8044 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
      #10 0x00007fc9eff2861c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
       
      Thread 1 (Thread 0x7fc9f088c800 (LWP 3421955) "mariadbd"):
      #0  0x00007fc9eff1b05f in __GI___poll (fds=0x55c5b0b35be8, nfds=3, timeout=timeout@entry=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
      #1  0x000055c5ae48b177 in poll (__timeout=-1, __nfds=<optimized out>, __fds=<optimized out>) at /usr/include/x86_64-linux-gnu/bits/poll2.h:39
      #2  handle_connections_sockets () at /data/bld/bb-11.5-monty-rel/sql/mysqld.cc:6340
      #3  0x000055c5ae48c094 in mysqld_main (argc=<optimized out>, argv=<optimized out>) at /data/bld/bb-11.5-monty-rel/sql/mysqld.cc:6038
      #4  0x00007fc9efe461ca in __libc_start_call_main (main=main@entry=0x55c5ae437100 <main(int, char**)>, argc=argc@entry=7, argv=argv@entry=0x7ffc377eef68) at ../sysdeps/nptl/libc_start_call_main.h:58
      #5  0x00007fc9efe46285 in __libc_start_main_impl (main=0x55c5ae437100 <main(int, char**)>, argc=7, argv=0x7ffc377eef68, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffc377eef58) at ../csu/libc-start.c:360
      #6  0x000055c5ae480511 in _start ()
      

      Attachments

        Issue Links

          Activity

            People

              monty Michael Widenius
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.